--- a/style.css
+++ b/style.css
@@ -1,82 +1,52 @@
-*{
-    margin: 0%;
-    padding: 0%;
-    background-color: 	#dfe3ee;
-}
-.textbox{
-    margin-top: 200px;
-    margin-left: 150px;
+body {
+    background-color: #f2f2f2;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 
-}
-h1{
-    font-size: 55px;
-    color: black;
-    font-family: sans-serif;
-}
-h2{
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 28px;
-    font-weight: normal;
-    line-height: 32px;
-    width: 500px;
-}
-.container{
-    
+  .login-box {
     width: 400px;
-    height: 350px;
-    margin-top: -194px;
-    margin-right: 160px;
-    float: right;
-    border-radius: 12px;
     background-color: white;
-    width: 390px;
-    height: 355px;  
-   text-align: center;
-}
-.form{
-    float: right;
-   background-color: white;
-    margin-top: -12px;
-    padding: 20px;
-}
-.form input{
-    margin-top: 10px;
-margin-left: -10px;
-border-radius: 8px;
-margin-right: -10px;
-    padding:17px;
-    width: 332px;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  }
 
-}
-button{
-    margin-top: 15px;
-    background-color: darkolivegreen ;
-    padding: 16px;
+  .login-box h1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .login-box select {
     width: 100%;
-    border-radius: 8px;
-    color: white;
-    font-family: sans-serif;
-    font-size: 18px;
-
-
-}
-p{
-    background-color: white;
+    padding: 10px;
     font-size: 16px;
-    color: #1877f2;
-    margin-top: 10px;
-}
-p a{
-    color: #1877f2;
-    background-color: white;
-}
-.btn {
-    padding: 7px;
-    margin-top: 15px;
-   background-color: white;
-   margin-left: 60px;
-   margin-right: 60px;
-}
-.btn button{
-    background-color:#1b9c24 ;
-}
+    margin-bottom: 20px;
+  }
+
+  .login-box input[type="text"],
+  .login-box input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
+  .login-box input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 16px;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 20px;
+  }
+
+  .login-box input[type="submit"]:hover {
+    background-color: #3e8e41;
+  }
